Completed migration, remote is live.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 *.pid
 passenger.*.lock
 /.idea/
-
+/config/templates
+/config/database.yml
 # Project exclude paths
 /vendor/bundle/ruby/2.7.0/gems/passenger-6.0.7/src/nodejs_supportlib/vendor-copy/continuation-local-storage/node_modules/
 /vendor/bundle/ruby/2.7.0/gems/passenger-6.0.7/src/nodejs_supportlib/vendor-copy/winston/node_modules/
